--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Term-TermKey
 
+0.15    CHANGES:
+         * Updated for libtermkey 0.16:
+           + Support TERMKEY_TYPE_MODEREPORT and TERMKEY_TYPE_UNKNOWN_CSI
+
 0.14    CHANGES:
          * Updated for libtermkey 0.15:
            + Support TERMKEY_TYPE_POSITION
